--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -14,7 +14,9 @@ header{
 img{
   padding-left: 10px;
 }
-
+canvas{
+  border: 1px solid black;
+}
 #menu, #juego, #agregarPalabra{
   display: inline;
   width: auto;
